# Lebai_gazebo_moveit

./: README.md
lebai_lm3_gazebo/: CMakeLists.txt  package.xml
lebai_lm3_gazebo/config/: controllers.yaml  joint_limits.yaml  lebai_lm3_l1_gazebo.srdf  lebai_lm3_l1_gazebo.urdf  lm3_controllers.yaml  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  ros_controllers.yaml
lebai_lm3_gazebo/install/: local_setup.sh  setup.sh
lebai_lm3_gazebo/launch/: command_node.launch.py  gazebo_moveit_launch.launch.py  lebai_gazebo_simple.launch (copy).py  lebai_gazebo_simple.launch.py  mesaj_gonder.txt
lebai_lm3_gazebo/script/: Main_imporc_controller.py  get_current_pose.py  move_robot.py  target_robot.py
lebai_lm3_gazebo/src/: read_cam_data.py  simple_move.cpp  target_robot.py
lebai_lm3_gazebo/srv/: ExecuteWaypoints.srv
lebai_lm3_gazebo/urdf/: bare_robot.urdf  lebai_lm3_l1_gazebo.urdf  stepne.urdf
lebai_lm3_moveit_config/: CMakeLists.txt
lebai_lm3_moveit_config/config/: ompl_planning.yaml
